traces/bug_448.txt
examples++-load/distance.cpp:463: error: DEAD_STORE
  The value written to &nbve (type int) is never used.
Showing all 1 steps of the trace


examples++-load/distance.cpp:463:5: Write of unused value
461.   
462.       typedef Mesh::Element Elem;
463.       const int nbve=3;
           ^
464.       
465.       const Elem & K = Th[k];
